Add text to intro section

--- a/main.tex
+++ b/main.tex
@@ -41,6 +41,8 @@
 % Provides a draft mark at the top of the document.
 \draftstamp{\today}{DRAFT}
 
+\usepackage{cleveref}
+
 \begin {document}
 \frontmatter
 
@@ -48,7 +50,7 @@
 \pagestyle{empty}
 
 \title{ %% {\it \huge Thesis Proposal}\\
-{\bf Benchmarking the OODA Loop of an Edge-Enabled Autonomous Drone System with On-Board Compute}}
+{\bf Benchmarking OODA Loop of an Edge-Enabled Autonomous Drone System with On-Board Compute}}
 \author{Aditya Chanana}
 \date{December 18}
 \Year{2024}
