--- a/register.bib
+++ b/register.bib
@@ -1,3 +1,19 @@
+@inproceedings{satya1996,
+author = {Satyanarayanan, M.},
+title = {Fundamental challenges in mobile computing},
+year = {1996},
+isbn = {0897918002},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/248052.248053},
+doi = {10.1145/248052.248053},
+booktitle = {Proceedings of the Fifteenth Annual ACM Symposium on Principles of Distributed Computing},
+pages = {1–7},
+numpages = {7},
+location = {Philadelphia, Pennsylvania, USA},
+series = {PODC '96}
+}
+
 @article{satya2014,
 author = {Satyanarayanan, Mahadev},
 title = {A Brief History of Cloud Offload: A Personal Journey from Odyssey Through Cyber Foraging to Cloudlets},
@@ -16,7 +32,7 @@ pages = {19–23},
 numpages = {5}
 }
 
-@ARTICLE{satya,
+@ARTICLE{satya2009,
   author={Satyanarayanan, Mahadev and Bahl, Paramvir and Caceres, Ramon and Davies, Nigel},
   journal={IEEE Pervasive Computing},
   title={The Case for VM-Based Cloudlets in Mobile Computing},
@@ -61,3 +77,20 @@ language={English},
 url={https://www.proquest.com/magazines/defence-technology-information-advantage/docview/224120766/se-2},
 }
 
+@inproceedings{satya21,
+author = {Satyanarayanan, Mahadev and Beckmann, Nathan and Lewis, Grace A. and Lucia, Brandon},
+title = {The Role of Edge Offload for Hardware-Accelerated Mobile Devices},
+year = {2021},
+isbn = {9781450383233},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3446382.3448360},
+doi = {10.1145/3446382.3448360},
+abstract = {This position paper examines a spectrum of approaches to overcoming the limited computing power of mobile devices caused by their need to be small, lightweight and energy efficient. At one extreme is offloading of compute-intensive operations to a cloudlet nearby. At the other extreme is the use of fixed-function hardware accelerators on mobile devices. Between these endpoints lie various configurations of programmable hardware accelerators. We explore the strengths and weaknesses of these approaches and conclude that they are, in fact, complementary. Based on this insight, we advocate a software-hardware co-evolution path that combines their strengths.},
+booktitle = {Proceedings of the 22nd International Workshop on Mobile Computing Systems and Applications},
+pages = {22–29},
+numpages = {8},
+keywords = {5G, ASIC, GPU, TCB, cyber foraging, devops, disconnected operation, edge computing, latency, mobile computing, offloading, stealth},
+location = {Virtual, United Kingdom},
+series = {HotMobile '21}
+}
