--- a/intro.tex
+++ b/intro.tex
@@ -1,20 +1,20 @@
 \chapter{Introduction}
 % Goal : 5-10 page talk before the talk
 % maybe not 10 pages, but providing a general overview of the paper is the goal here
-A significant body of work has aimed to address the inherent resource poverty
-of mobile devices using cloud or cloudlet offload \cite{satya}. Mobile
-devices perpetually lag behind static devices in computational ability because
-of their size and weight constraints \cite{satya2014}. Increased computational
-ability, at the same level of hardware efficiency, demands higher energy
-consumption. This requires larger batteries to preserve operating time, thereby
-increasing weight and size.  However, mobile devices become less useful the
-heavier and bigger they become.  For example, people prefer lighter and thinner
-smartphones as they are less intrusive and more portable. It turns out to also
-true for unmanned aerial vehicles (UAVs), or drones, which spend most of their
-energy on flight.  Increased drone weight leads to an upwards spiral in weight
-as larger rotors and more powerful motors are needed to achieve the same amount
-of lift.  This, in turn, requires larger batteries, which in turn may require a
-more reinforced aircraft structure, and so on.
+\section{Overview}
+A significant body of work in the field of mobile computing has aimed to
+address the inherent resource poverty of mobile devices using cloud or cloudlet
+offload \cite{satya1996,satya2009}. Mobile devices perpetually lag behind
+static devices in computational ability because of their size and weight
+constraints \cite{satya2014}. Increased computational ability, at the same
+level of hardware efficiency, demands higher energy consumption. This requires
+larger batteries to preserve operating time, thereby increasing weight and
+size---which are undesirable for mobile devices.  This is especially true for
+unmanned aerial vehicles (UAVs), or drones, which spend most of their energy on
+flight.  Increased drone weight leads to an upwards spiral in weight as larger
+rotors and more powerful motors are needed to achieve the same amount of lift.
+This requires larger batteries which, in turn, may require a more reinforced
+aircraft structure, and so on.
 
 Cloudlet offload addresses these issues by allowing mobile devices to remotely
 execute computationally expensive tasks on static infrastructure that does not
@@ -25,58 +25,107 @@ would otherwise be possible.
 SteelEagle, an autonomous drone system, follows this approach \cite{bala2024}.
 Its main tenet is the use of commerical-off-the-shelf (COTS) drones, which are
 readily available at low cost but typically have minimal to no on-board
-compute.  Utilizing cloudlet offload, SteelEagle enables COTS drones to perform
-much more intelligent tasks than what they were designed for and exhibit
-autonomous capabilities typically only found in larger, more expensive drones.
-SteelEagle focuses on tasks that require the ability to sense changes in the
-physical environment over time, and to react to them. During flight, for
-instance, a drone can relay the video stream from its camera over a commercial
-cellular network to an on-ground cloudlet over a commercial cellular network,
-which can run a complex pipeline involving neural networks to perform tasks
-such as object detection.  This processing of the raw drone sensor streams
-allows us to obtain higher level semantic information about the drone's
-physical environment, such as the distance to obstacles that present the danger
-of a collision. The drone can then be sent piloting commands to react. For
-instance, these could be instructions to actuate to avoid an impending
-collision.
+computational resoures.  Utilizing cloudlet offload, SteelEagle enables COTS
+drones to perform much more intelligent tasks than what they were designed for,
+and exhibit autonomous capabilities typically only found in larger, more
+expensive drones.  SteelEagle focuses on active vision tasks which require the
+ability to perform live video analytics during flight to determine the next
+course of action. SteelEagle drones relay their camera video stream over a
+commercial cellular network to a nearby on-ground edge server, a cloudlet,
+which runs a computationally expensive pipeline involving neural networks to
+perform tasks such as object detection (\cref{fig:steeleagle-drone-arch}).  This processing of the raw drone
+sensor streams allows obtaining higher level semantic information about the
+drone's physical environment, such as the distance to obstacles that present
+the danger of a collision. The drone can then be sent piloting commands to
+react, such as instructions to actuate to avoid an impending collision.
+
+\begin{figure}[htbp]
+\centerline{\includegraphics[width = .6\textwidth]{figs/steeleagle-drone-arch-cropped.pdf}}
+\caption{Cloudlet Offload in SteelEagle}
+\label{fig:steeleagle-drone-arch}
+\end{figure}
 
 An important consideration for SteelEagle is the agility of the resulting
 system.  How quickly can a drone respond to a change in its environment? It is
 the end-to-end latency of the entire execution pipeline, including sensing,
 offloading, inferencing, decision making, and actuation, that defines the
-agility. A high end-to-end latency can severely handicap the drone---it
-must fly at lower speeds to be safe if it takes a long time to identify
-obstacles and actuate to bypass them.
+agility. A high end-to-end latency can severely handicap the drone---it must
+fly at a higher altitude or at lower speeds to be safe if it takes a long time
+to identify obstacles and actuate to bypass them. Drone flight at a higher
+altitude precludes close observation, and lower speeds make missions take
+longer, limiting the capabilities of the drone. Search and rescue missions in
+forests, and missions to aid policing operations in dense cities, for instance,
+must fly at low altitudes while bypassing obstacles in the environment that
+present a collision risk---trees branches, streetlight poles, utility
+wires, and buildings---without impacting mission speed. Unless we can achieve
+high agility, SteelEagle drones will struggle to perform these missions well.
+Since these missions are one of the most compelling use cases for autonomous
+drones, benchmarking the end-to-end pipeline to determine latency bottlenecks
+and identifying opportunities for latency optimization is a very worthy pursuit.
 
-To better understand the end-to-end latency, we can utilize the "Observe,
-Orient, Decide, Act" (OODA) loop framework devised by military strategist John
-R. Boyd. According to Boyd, decision-making happens in a continous iteration of
-these steps. He attributed the faster OODA loop of U.S. pilots flyng F-86s,
-because of the bubble-shaped canopy offering better visibility and hydraulic
-controls that allowed for easier switching between manoeuvres, as the reason
-why the slower F-86s fared better than the North Korean MiG-15s during the
-Korean War \cite{morton1995}. Paritioning the SteelEagle execution pipeline
-according to the OODA steps
+The "Observe, Orient, Decide, Act" (OODA) loop framework devised by military
+strategist John R. Boyd provides a framework to structure our investigation
+into the end-to-end latency of SteelEagle. According to Boyd, decision-making
+happens in a continuous iteration of these steps. Boyd attributed the faster
+OODA loop of U.S. pilots flyng F-86s, because of the bubble-shaped canopy
+offering better visibility and hydraulic controls that allowed for easier
+switching between manoeuvres, as the reason the slower F-86s fared better than
+the North Korean MiG-15s during the Korean War \cite{morton1995}. A system with
+a tighter OODA loop corresponds to a more agile drone. Instead of measuring
+just the overall system latency, performing a break down of the latency across
+the OODA steps provides more insight into system latency bottlenecks. Ideally,
+the decision stage, which involves inferencing, should be the slowest stage.
 
-
-Cloudlet offload, by itself, imposes an
-upper bound on drone agility as it adds the cost of round-trip latency to a
-cloudlet. In the case of SteelEagle, this cost has so far been unavoidable
-as there has been no compute available on the drone.
-
-\section{Motivation}
-
-However, using only cloudlet offload presents severe limitations. First,
+SteelEagle drones currently act as thin clients, performing no on-board
+computation---they are controlled exclusively over the network. They transmit a
+video stream from their camera to a cloudlet which determines the next course
+of action based on an analysis of the received video, sent back to the drone
+over the network. While this strategy allows treating consumer-grade
+non-programmable drones as black boxes, it presents severe limitations. First,
 SteelEagle drones struggle in areas with unreliable cell service and are
 completely inoperable in regions without cellular coverage. Second, cloudlet
 offload imposes an upper bound on drone agility as it adds the cost of a
 round-trip latency to a cloudlet. As originally envisioned, cloudlets are
 differentiated from clouds because of their physical proximity, which allows
-application end-to-end response time to be just a few milliseconds. However,
-in practice, the usage of commerical cellular networks for offload to the
-cloudlet increases this latency to tens of milliseconds. In practice, this
-limits the agility of the drone, as the reaction time is at least the round-trip
-time to the cloudlet.
+application end-to-end response time to be just a few milliseconds. However, in
+practice, the usage of commerical cellular networks for offload to the cloudlet
+increases this latency to tens of milliseconds. In practice, this limits the
+agility of the drone, as the reaction time is at least the round-trip time to
+the cloudlet.
+
+This thesis explores the use of onboard computation to mitigate these issues,
+and the resulting impact on drone agility. In recent years, domain-specific
+system-on-a-chip devices have become available that provide substantial
+energy-efficient on-board computational resources through the inclusion of
+hardware accelerators in the chip design. These chips can decode the video
+stream generated by the drone and perform analytics using TensorFlow Lite
+models, and often include 5G and Wi-Fi connectivity. Using such a chip as a
+communications relay in SteelEagle allows us to continue treating the drone as
+a black box, but employ new cloudlet offload tactics that result in tighter
+OODA loops for use cases that can utilize the hardware accelerators, while
+retaining the generality offered by cloudlet offload.
+
+\section{Background: SteelEagle}
+
+Autonomous drones perform tasks such as navigating between waypoints and
+tracking moving objects without the need for a human pilot.  However,
+autonomous drones today are large and expensive. Over time, they will become
+cheaper and lighter as new ASIC designs are developed that are more energy
+efficient and mass production lowers costs. Until then, leveraging edge
+computing to add autonomous features to lighter consumer-grade drones at a much
+lower price tag is a very appealing proposition. This is the software-hardware
+co-evolution path that Satyanarayanan et al outlined, presenting offloading as
+a way to "cheat" until ASIC designs are available \cite{satya21}. Lightweight
+drones are more versatile, as they present a smaller public safety hazard and
+thus face fewer regulations.
+
+Bala et al have demonstrated that even drones with a monocular camera can
+perform tasks such as object tracking and depth inference \cite{bala2024}.
+
+\section{Background: Offloading Tactics}
+
+\section{Motivation}
+
 
 \section{Overview}
 
