--- a/register.bib
+++ b/register.bib
@@ -94,3 +94,10 @@ keywords = {5G, ASIC, GPU, TCB, cyber foraging, devops, disconnected operation, 
 location = {Virtual, United Kingdom},
 series = {HotMobile '21}
 }
+
+@misc{onionomega2,
+  author       = {{Onion.io}},
+  title        = {Omega2: The \$5 Linux Computer with Wi-Fi},
+  howpublished = {\url{https://onion.io/omega2/}},
+  note         = {Accessed: 2024-10-20}
+}
