--- a/main.tex
+++ b/main.tex
@@ -129,6 +129,7 @@ Dave Eckhardt
 % Other than that, just make it look good...
 
 \input{intro.tex}
+\input{benchmarks.tex}
 \input{section1.tex}
 \input{section2.tex}
 \input{conclusion.tex}
