--- a/register.bib
+++ b/register.bib
@@ -101,3 +101,94 @@ series = {HotMobile '21}
   howpublished = {\url{https://onion.io/omega2/}},
   note         = {Accessed: 2024-10-20}
 }
+
+@ARTICLE{satya2017,
+  author={Satyanarayanan, Mahadev},
+  journal={Computer},
+  title={Edge Computing},
+  year={2017},
+  volume={50},
+  number={10},
+  pages={36-38},
+  keywords={edge computing;Internet of Things;IoT;cloud computing;fog computing;cloudlets;Internet/web technologies;mobile;The IoT Connection},
+  doi={10.1109/MC.2017.3641639}}
+
+@ARTICLE{premsankar2018,
+  author={Premsankar, Gopika and Di Francesco, Mario and Taleb, Tarik},
+  journal={IEEE Internet of Things Journal},
+  title={Edge Computing for the Internet of Things: A Case Study},
+  year={2018},
+  volume={5},
+  number={2},
+  pages={1275-1284},
+  keywords={Cloud computing;Edge computing;Data centers;Mobile communication;Servers;Computer architecture;Internet of Things;Edge computing;fog computing;Internet of Things (IoT);mobile gaming},
+  doi={10.1109/JIOT.2018.2805263}}
+
+@inproceedings{10.1145/268998.266708,
+author = {Noble, Brian D. and Satyanarayanan, M. and Narayanan, Dushyanth and Tilton, James Eric and Flinn, Jason and Walker, Kevin R.},
+title = {Agile application-aware adaptation for mobility},
+year = {1997},
+isbn = {0897919165},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/268998.266708},
+doi = {10.1145/268998.266708},
+booktitle = {Proceedings of the Sixteenth ACM Symposium on Operating Systems Principles},
+pages = {276–287},
+numpages = {12},
+location = {Saint Malo, France},
+series = {SOSP '97}
+}
+
+@article{noble1997,
+author = {Noble, Brian D. and Satyanarayanan, M. and Narayanan, Dushyanth and Tilton, James Eric and Flinn, Jason and Walker, Kevin R.},
+title = {Agile application-aware adaptation for mobility},
+year = {1997},
+issue_date = {Dec. 1997},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {31},
+number = {5},
+issn = {0163-5980},
+url = {https://doi.org/10.1145/269005.266708},
+doi = {10.1145/269005.266708},
+journal = {SIGOPS Oper. Syst. Rev.},
+month = oct,
+pages = {276–287},
+numpages = {12}
+}
+
+@INPROCEEDINGS{choy2012,
+  author={Choy, Sharon and Wong, Bernard and Simon, Gwendal and Rosenberg, Catherine},
+  booktitle={2012 11th Annual Workshop on Network and Systems Support for Games (NetGames)},
+  title={The brewing storm in cloud gaming: A measurement study on cloud to end-user latency},
+  year={2012},
+  volume={},
+  number={},
+  pages={1-6},
+  keywords={Games;Servers;Delay;Time factors;Extraterrestrial measurements;Sociology;Statistics},
+  doi={10.1109/NetGames.2012.6404024}}
+
+
+@ARTICLE{lin2019,
+  author={Lin, Li and Liao, Xiaofei and Jin, Hai and Li, Peng},
+  journal={Proceedings of the IEEE},
+  title={Computation Offloading Toward Edge Computing},
+  year={2019},
+  volume={107},
+  number={8},
+  pages={1584-1607},
+  keywords={Backscatter;Wireless communication;Throughput;Radio frequency;Edge computing;Resource management;Energy harvesting;Internet of Things;Cloud computing;Computation offloading;edge computing;Internet of Things (IoT);mobile cloud computing (MCC);mobile edge computing (MEC)},
+  doi={10.1109/JPROC.2019.2922285}}
+
+
+@article{ellis2004,
+author = {Stephen R. Ellis and Katerina Mania and Bernard D. Adelstein and Michael I. Hill},
+title ={Generalizeability of Latency Detection in a Variety of Virtual Environments},
+
+journal = {Proceedings of the Human Factors and Ergonomics Society Annual Meeting},
+volume = {48},
+number = {23},
+pages = {2632-2636},
+year = {2004},
+doi = {10.1177/154193120404802306}}
