--- a/register.bib
+++ b/register.bib
@@ -192,3 +192,38 @@ number = {23},
 pages = {2632-2636},
 year = {2004},
 doi = {10.1177/154193120404802306}}
+
+@inproceedings{hu2016,
+author = {Hu, Wenlu and Gao, Ying and Ha, Kiryong and Wang, Junjue and Amos, Brandon and Chen, Zhuo and Pillai, Padmanabhan and Satyanarayanan, Mahadev},
+title = {Quantifying the Impact of Edge Computing on Mobile Applications},
+year = {2016},
+isbn = {9781450342650},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/2967360.2967369},
+doi = {10.1145/2967360.2967369},
+abstract = {Computational offloading services at the edge of the Internet for mobile devices are becoming a reality. Using a wide range of mobile applications, we explore how such infrastructure improves latency and energy consumption relative to the cloud. We present experimental results from WiFi and 4G LTE networks that confirm substantial wins from edge computing for highly interactive mobile applications.},
+booktitle = {Proceedings of the 7th ACM SIGOPS Asia-Pacific Workshop on Systems},
+articleno = {5},
+numpages = {8},
+location = {Hong Kong, Hong Kong},
+series = {APSys '16}
+}
+
+@inproceedings{satya2019,
+author = {Satyanarayanan, Mahadev and Gao, Wei and Lucia, Brandon},
+title = {The Computing Landscape of the 21st Century},
+year = {2019},
+isbn = {9781450362733},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3301293.3302357},
+doi = {10.1145/3301293.3302357},
+abstract = {This paper shows how today's complex computing landscape can be understood in simple terms through a 4-tier model. Each tier represents a distinct and stable set of design constraints that dominate attention at that tier. There are typically many alternative implementations of hardware and software at each tier, but all of them are subject to the same set of design constraints. We discuss how this simple and compact framework has explanatory power and predictive value in reasoning about system design.},
+booktitle = {Proceedings of the 20th International Workshop on Mobile Computing Systems and Applications},
+pages = {45–50},
+numpages = {6},
+keywords = {system design, sensor networks, rfid tags, quantum computing, periodic table, mobile computing, fog computing, energy harvesting, energy, edge computing, distributed systems, cloud computing, biological computing, architecture},
+location = {Santa Cruz, CA, USA},
+series = {HotMobile '19}
+}
